@@ -2,15 +2,18 @@
 <rolemap xmlns:tal="http://xml.zope.org/namespaces/tal">
   <roles>
     <role name="ROLENAME"
-          tal:repeat="role here/listRoles"
-          tal:attributes="name role" />
+          tal:repeat="role context/listRoles"
+          tal:attributes="name role"/>
   </roles>
   <permissions>
-    <permission name="PERMISSION NAME" acquire="1" roles="ROLE1 ROLE2"
-                tal:repeat="info here/listPermissions"
+    <permission name="PERMISSION NAME" acquire="True"
+                tal:repeat="info context/listPermissions"
                 tal:attributes="name info/name;
                                 acquire info/acquire;
-                                roles python:' '.join(info['roles']);
-                               " />
+                               ">
+      <role name="ROLENAME"
+         tal:repeat="role info/roles"
+         tal:attributes="name role"/>
+    </permission>
   </permissions>
 </rolemap>
